Kubernetes/Management/01-cluster-applier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-applier
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      role: cluster-applier
  template:
    metadata:
      labels:
        role: cluster-applier
    spec:
      containers:
      - image: agustinnormand/tpi_cluster_applier:5bd7f0a4fb62399b04d351d4b158d328c08d91d0
        imagePullPolicy: IfNotPresent
        name: cluster-applier
