Kubernetes/Management/01-entrypoint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entrypoint
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      role: entrypoint
  template:
    metadata:
      labels:
        role: entrypoint
    spec:
      containers:
      - env:
        - name: RABBIT_HOST
          value: rabbitmq-service
        image: agustinnormand/tpi_entrypoint:a37dd722fc57d86c9f9005de4fb993dc6e7cebc2
        imagePullPolicy: IfNotPresent
        name: entrypoint
        ports:
        - containerPort: 8080
