Kubernetes/Management/01-receptionist-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receptionist
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      role: receptionist
  template:
    metadata:
      labels:
        role: receptionist
    spec:
      containers:
      - image: agustinnormand/tpi_receptionist:11a65b31106c99ce03d1d243886f07ab13b83c59
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 20
          tcpSocket:
            port: 8080
        name: receptionist
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
