Kubernetes/Management/01-status-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-worker
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      role: status-worker
  template:
    metadata:
      labels:
        role: status-worker
    spec:
      containers:
      - image: agustinnormand/tpi_status-worker:9d699ff443c3aecc847b43ac360d645bbaca280a
        imagePullPolicy: IfNotPresent
        name: status-worker
