Kubernetes/Management/01-yaml-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaml-manager
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      role: yaml-manager
  template:
    metadata:
      labels:
        role: yaml-manager
    spec:
      containers:
      - image: agustinnormand/tpi_yaml-manager:9d699ff443c3aecc847b43ac360d645bbaca280a
        imagePullPolicy: IfNotPresent
        name: yaml-manager
