Kubernetes/Management/02-yaml-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaml-manager
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      role: yaml-manager
  template:
    metadata:
      labels:
        role: yaml-manager
    spec:
      containers:
      - env:
        - name: RABBIT_HOST
          value: rabbitmq-cluster-app
        - name: RABBIT_USER
          value: admin
        - name: RABBIT_PWD
          value: agusmarian
        image: agustinnormand/tpi_yaml-manager:9ddd3743c8609c411289f5a1068d6c5757629584
        imagePullPolicy: IfNotPresent
        name: yaml-manager
