Kubernetes/Management/03-cluster-applier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-applier
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      role: cluster-applier
  template:
    metadata:
      labels:
        role: cluster-applier
    spec:
      containers:
      - env:
        - name: RABBIT_HOST
          value: rabbitmq-cluster-app
        - name: RABBIT_USER
          value: admin
        - name: RABBIT_PWD
          value: agusmarian
        image: agustinnormand/tpi_cluster_applier:1e35e2d899b6af61cf86e66576aacb6250da9648
        imagePullPolicy: IfNotPresent
        name: cluster-applier
