Kubernetes/Management/04-status-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-worker
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      role: status-worker
  template:
    metadata:
      labels:
        role: status-worker
    spec:
      containers:
      - env:
        - name: RABBIT_HOST
          value: rabbitmq-service
        - name: REDIS_HOST
          value: redis-service
        image: agustinnormand/tpi_status-worker:72d9aed2db3e83ede0c5f7072606902a6b2926dd
        imagePullPolicy: IfNotPresent
        name: status-worker
