Kubernetes/Management/01-entrypoint-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entrypoint-lb
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  selector:
    role: entrypoint
