Kubernetes/Management/B2-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    external-dns.alpha.kubernetes.io/hostname: redis-service.framework.services.gcp.com.ar.
  labels:
    component: redis
spec:
  type: LoadBalancer
  selector:
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
