Kubernetes/Management/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-lb
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: argocd-server
