Kubernetes/Management/01-entrypoint-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entrypoint-ingress
spec:
  defaultBackend:
    service:
      name: entrypoint-lb
      port:
        number: 80
